.provarCaches/00D5f000005vwGkEAI/objects/rstk__icitemval__c.object
<CustomObject>
    <description>icitemval__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icitemval_icitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__icitemval_pjproj__r.rstk__pjproj_proj__c &amp; &apos;_&apos; &amp; TEXT(rstk__icitemval_date__c)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icitemval_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp; rstk__icitemval_pjproj__r.rstk__pjproj_proj__c &amp; &apos;_&apos; &amp; text(rstk__icitemval_date__c)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Item Inventory Value by Date</relationshipLabel>
        <relationshipName>icitemvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_glacct__c</fullName>
        <externalId>true</externalId>
        <label>Inventory Account (GL)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Item Inventory Value by Date</relationshipLabel>
        <relationshipName>icitemvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Item Inventory Value by Date</relationshipLabel>
        <relationshipName>icitemvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_qtyoh__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_syacc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory Account (Sub-Ledger)</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Item Inventory Value by Date</relationshipLabel>
        <relationshipName>icitemvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_syqbcoa__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory Account (SYQBCOA)</label>
        <referenceTo>rstk__syqbcoa__c</referenceTo>
        <relationshipLabel>Item Inventory Value by Date</relationshipLabel>
        <relationshipName>icitemvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_unitcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icitemval_value__c</fullName>
        <formula>rstk__icitemval_qtyoh__c * rstk__icitemval_unitcost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Item Inventory Value by Date</label>
    <listViews>
        <fullName>rstk__RS_Inventory_Valuation_By_Date</fullName>
        <columns>NAME</columns>
        <columns>rstk__icitemval_div__c</columns>
        <columns>rstk__icitemval_icitem__c</columns>
        <columns>rstk__icitemval_date__c</columns>
        <columns>rstk__icitemval_pjproj__c</columns>
        <columns>rstk__icitemval_qtyoh__c</columns>
        <columns>rstk__icitemval_unitcost__c</columns>
        <columns>rstk__icitemval_value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstk__icitemval_syacc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inventory Valuation By Date</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Item Inventory Value by Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Inventory Value by Date</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>